# madrid-sunsets

./: .env.example  .gitattributes  .gitignore  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/pi/: README.md  pyproject.toml
apps/pi/src/sunset_pi/: __init__.py  __main__.py  camera.py  capture.py  config.py  scheduler.py  scoring.py  uploader.py
apps/pi/systemd/: sunset-pi.service
apps/pi/tests/: test_scoring.py  test_smoke.py
apps/web/: next.config.ts  package.json  proxy.ts  tsconfig.json
apps/web/app/: globals.css
apps/web/components/: DayCell.tsx  DayDateHeading.tsx  DayDetail.tsx  DayMeta.tsx  DayModal.tsx  DayNote.tsx  DayPageClient.tsx  EmptyState.tsx  HomeExperience.tsx  LivePreview.tsx  LocaleSwitcher.tsx  LoginSubmitButton.tsx  Logo.tsx  MonthGrid.tsx  MonthSwitcher.tsx  OtpForm.tsx  PhotoImage.tsx  SiteFooter.tsx  SiteHeader.tsx  Skeleton.tsx  ThemeProvider.tsx  ThemeScript.tsx  ThemeToggle.tsx  UserMenu.tsx  WelcomeToast.tsx
apps/web/i18n/: routing.ts
apps/web/lib/: auth-callback.test.ts  auth-callback.ts  auth.test.ts  auth.ts  photos.server.test.ts  photos.server.ts  photos.test.ts  photos.ts  queries.ts  utils.ts
apps/web/messages/: en.json  es.json
docs/: architecture.md  deployment.md
supabase/: config.toml  seed.sql
supabase/functions/notify/: index.ts
supabase/functions/purge-raw/: index.ts
supabase/migrations/: 20260425223811_initial_schema.sql
supabase/templates/: magic-link.html  signup-confirmation.html
(+19 files in other folders)
